--- a/src/main/resources/template/serviceImpl.java.vm
+++ b/src/main/resources/template/serviceImpl.java.vm
@@ -2,6 +2,7 @@ package ${package.ServiceImpl};
 
 import ${package.Entity}.${entity};
 import ${package.Service}.${table.serviceName}
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 /**
@@ -11,6 +12,7 @@ import org.springframework.stereotype.Service;
  * @since ${date}
  */
 @Service
+@Slf4j
 public class ${table.serviceImplName} implements ${table.serviceName} {
 
 }
